[package]
name = "frclib-nt4"
version = "0.1.5"
edition = "2021"
description = "An implementation of WPI's Network Tables spec"

[dependencies]
tokio = { version = "1.39.3", features = ["rt", "sync", "net", "time", "macros", "parking_lot", "rt-multi-thread"] }
futures-util = "0.3.30"
thiserror = "1.0.63"
rmp = "0.8"
rmp-serde = "1.3.0"
rmpv = { version = "1.3", features = ["with-serde"] }
serde_json = "1.0.127"
tokio-tungstenite = "0.23.1"
serde = { version = "1", features = ["derive"] }
hyper = { version = "0.14.27", features = ["server", "http1", "tcp"] } #don't update, breaks too much
tracing = { version = "0.1.40"}
nohash-hasher = "0.2.0"
async-recursion = "1.1.1"
async-blocking-bridger = "0.1.0"
parking_lot = "0.12.3"
frclib-core = { version = "0.2.4", features = ["basic"]}

[dev-dependencies]
tracing-subscriber = "0.3.18"

[profile.release]
lto = true
opt-level = 3
