[package]
name = "frclib-nt4"
version = "0.1.5"
edition = "2021"
description = "An implementation of WPI's Network Tables spec"

[dependencies]
thiserror = "1.0.63"

rmp = "0.8"
rmp-serde = "1.3.0"
rmpv = { version = "1.3", features = ["with-serde"] }

serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1.40"}
nohash-hasher = "0.2.0"
frclib-core = { version = "0.2.4", features = ["basic"]}
slotmap = "1.0.7"

async-recursion = "1.1.1"

hyper = { version = "1", features = ["client", "http1", "server"] }
tungstenite = "0.24.0"
mio = { version = "1.0.2", features = ["net", "os-poll"] }
futures = { version = "0.3.30", default-features = false, features = ["alloc", "async-await", "std"] }

[profile.release]
lto = true
opt-level = 3
